# kwargs

./: CMakeLists.txt  README.md
cmake/Modules/: TargetDoc.cmake
doc/: doxy.config.in  doxystyle.css
doc/example_output/: example_1.txt  example_2.txt  example_3.txt
doc/pages/: mainpage.md
include/: CMakeLists.txt  kwargs.h
src/: CMakeLists.txt  example_1.cc  example_2.cc  example_3.cc  example_4.cc
